create main.html file

--- a/main.html
+++ b/main.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Well come to PNC</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam dolore atque ipsum porro eos omnis quas esse amet tempore molestias iste quod veniam, magni fugit. Cupiditate maxime cum possimus obcaecati!</p>
 </body>
 </html>
